--- a/doc/md/设计模式/设计模式之美.md
+++ b/doc/md/设计模式/设计模式之美.md
@@ -90,13 +90,227 @@ public class Wallet {
 
  从代码中，我们可以发现，**Wallet** 类主要有四个属性（也可以叫作成员变量），也就是我们前面定义中提到的信息或者数据。其中:
 
-| id                      | 表示钱包的唯一编号         |
+| 属性                    | 描述                       |
 | ----------------------- | -------------------------- |
+| id                      | 表示钱包的唯一编号         |
 | createTime              | 表示钱包创建的时间         |
 | balance                 | 表示钱包中的余额           |
 | balanceLastModifiedTime | 表示上次钱包余额变更的时间 |
 
- 我们参照封装特性，对钱包的这四个属性的访问方式进行了限制。调用者只允许通过下面这六个方法来访问或者修改钱包里的数据。 
+我们参照封装特性，对钱包的这四个属性的访问方式进行了限制。调用者只允许通过下面这六个方法来访问或者修改钱包里的数据。 
+
+```java
+String getId()
+long getCreateTime()
+BigDecimal getBalance()
+long getBalanceLastModifiedTime()
+void increaseBalance(BigDecimal increasedAmount)
+void decreaseBalance(BigDecimal decreasedAmount)
+```
+
+> *之所以这样设计，是因为从业务的角度来说，id、createTime 在创建钱包的时候就确定好了，之后不应该再被改动，所以，我们并没有在 Wallet 类中，暴露 id、createTime 这两个属性的任何修改方法，比如 set 方法。而且，这两个属性的初始化设置，对于 Wallet 类的调用者来说，也应该是透明的，所以，我们在 Wallet 类的构造函数内部将其初始化设置好，而不是通过构造函数的参数来外部赋值。*
+>
+> *对于钱包余额 balance 这个属性，从业务的角度来说，只能增或者减，不会被重新设置。所以，我们在 Wallet 类中，只暴露了 increaseBalance() 和 decreaseBalance() 方法，并没有暴露 set 方法。对于 balanceLastModifiedTime 这个属性，它完全是跟 balance 这个属性的修改操作绑定在一起的。只有在 balance 修改的时候，这个属性才会被修改。所以，我们把 balanceLastModifiedTime 这个属性的修改操作完全封装在了 increaseBalance() 和 decreaseBalance() 两个方法中，不对外暴露任何修改这个属性的方法和业务细节。这样也可以保证 balance 和 balanceLastModifiedTime 两个数据的一致性。*
+>
+> *对于封装这个特性，我们需要编程语言本身提供一定的语法机制来支持。这个语法机制就是访问权限控制。例子中的 private、public 等关键字就是 Java 语言中的访问权限控制语法。private 关键字修饰的属性只能类本身访问，可以保护其不被类之外的代码直接访问。如果 Java 语言没有提供访问权限控制语法，所有的属性默认都是 public 的，那任意外部代码都可以通过类似 wallet.id=123; 这样的方式直接访问、修改属性，也就没办法达到隐藏信息和保护数据的目的了，也就无法支持封装特性了。* 
+
+如果我们对类中属性的访问不做限制，那任何代码都可以访问、修改类中的属性，**虽然这样看起来更加灵活，但从另一方面来说，过度灵活也意味着不可控**。属性可以随意被以各种奇葩的方式修改，而且修改逻辑可能散落在代码中的各个角落，势必影响代码的可读性、可维护性。 
+
+除此之外，类仅仅通过有限的方法暴露必要的操作，也能提高类的易用性。如果我们把类属性都暴露给类的调用者，调用者想要正确地操作这些属性，就势必要对业务细节有足够的了解。而这对于调用者来说也是一种负担。相反，如果我们**将属性封装起来，暴露少许的几个必要的方法给调用者使用，调用者就不需要了解太多背后的业务细节，用错的概率就减少很多**。这就好比，如果一个冰箱有很多按钮，你就要研究很长时间，还不一定能操作正确。相反，如果只有几个必要的按钮，比如开、停、调节温度，你一眼就能知道该如何来操作，而且操作出错的概率也会降低很多。 
+
+---
+
+**抽象(Abstraction)**
+
+> 封装主要讲的是如何隐藏信息、保护数据，而抽象讲的是如何隐藏方法的具体实现，让调用者只需要关心方法提供了哪些功能，并不需要知道这些功能是如何实现的 
+
+在面向对象编程中，我们常借助编程语言提供的接口类（比如 Java 中的 interface 关键字语法）或者抽象类（比如 Java 中的 abstract 关键字语法）这两种语法机制，来实现抽象这一特性。
+
+*示例代码*
+
+```java
+public interface IPictureStorage {
+  void savePicture(Picture picture);
+  Image getPicture(String pictureId);
+  void deletePicture(String pictureId);
+  void modifyMetaInfo(String pictureId, PictureMetaInfo metaInfo);
+}
+
+public class PictureStorage implements IPictureStorage {
+  // ...省略其他属性...
+  @Override
+  public void savePicture(Picture picture) { ... }
+  @Override
+  public Image getPicture(String pictureId) { ... }
+  @Override
+  public void deletePicture(String pictureId) { ... }
+  @Override
+  public void modifyMetaInfo(String pictureId, PictureMetaInfo metaInfo) { ... }
+}
+```
+
+> *在上面的这段代码中，我们利用 Java 中的 interface 接口语法来实现抽象特性。调用者在使用图片存储功能的时候，只需要了解 IPictureStorage 这个接口类暴露了哪些方法就可以了，不需要去查看 PictureStorage 类里的具体实现逻辑。*
+>
+> *实际上，抽象这个特性是非常容易实现的，并不需要非得依靠接口类或者抽象类这些特殊语法机制来支持。换句话说，并不是说一定要为实现类（PictureStorage）抽象出接口类（IPictureStorage），才叫作抽象。即便不编写 IPictureStorage 接口类，单纯的 PictureStorage 类本身就满足抽象特性。*
+>
+> *之所以这么说，那是因为，**类的方法是通过编程语言中的“函数”这一语法机制来实现的。通过函数包裹具体的实现逻辑，这本身就是一种抽象。调用者在使用函数的时候，并不需要去研究函数内部的实现逻辑，只需要通过函数的命名、注释或者文档，了解其提供了什么功能，就可以直接使用了**。比如，我们在使用 C 语言的 malloc() 函数的时候，并不需要了解它的底层代码是怎么实现的。* 
+
+**抽象有时候会被排除在面向对象的四大特性之外**
+
+> 抽象这个概念是一个非常通用的设计思想，并不单单用在面向对象编程中，也可以用来指导架构设计等。而且这个特性也并不需要编程语言提供特殊的语法机制来支持，只需要提供“函数”这一非常基础的语法机制，就可以实现抽象特性、所以，它没有很强的“特异性”，有时候并不被看作面向对象编程的特性之一 
+
+实际上，如果上升一个思考层面的话，抽象及其前面讲到的封装都是人类处理复杂性的有效手段。在面对复杂系统的时候，人脑能承受的信息复杂程度是有限的，所以我们必须忽略掉一些非关键性的实现细节。而抽象作为一种只关注功能点不关注实现的设计思路，正好帮我们的大脑过滤掉许多非必要的信息。
+
+除此之外，抽象作为一个非常宽泛的设计思想，在代码设计中，起到非常重要的指导作用。很多设计原则都体现了抽象这种设计思想，比如基于接口而非实现编程、开闭原则（对扩展开放、对修改关闭）、代码解耦（降低代码的耦合性）等。我们在讲到后面的内容的时候，会具体来解释。
+
+换一个角度来考虑，我们在定义（或者叫命名）类的方法的时候，也要有抽象思维，不要在方法定义中，暴露太多的实现细节，以保证在某个时间点需要改变方法的实现逻辑的时候，不用去修改其定义。举个简单例子，比如 getAliyunPictureUrl() 就不是一个具有抽象思维的命名，因为某一天如果我们不再把图片存储在阿里云上，而是存储在私有云上，那这个命名也要随之被修改。相反，如果我们定义一个比较抽象的函数，比如叫作 getPictureUrl()，那即便内部存储方式修改了，我们也不需要修改命名。 
+
+---
+
+**继承(Inheritance)**
+
+> 继承是用来表示类之间的 **`is-a`** 关系。从继承关系上来讲，继承可以分为两种模式，单继承和多继承。 
+
+继承最大的一个好处就是代码复用。假如两个类有一些相同的属性和方法，我们就可以将这些相同的部分，抽取到父类中，让两个子类继承父类。这样，两个子类就可以重用父类中的代码，避免代码重复写多遍。不过，这一点也并不是继承所独有的，我们也可以通过其他方式来解决这个代码复用的问题，比如利用组合关系而不是继承关系。 
+
+我们通过继承来关联两个类，反应真实世界中的这种关系，非常符合人类的认知，而且，从设计的角度来说，也有一种结构美感。 
+
+---
+
+**多态(Ploymorphism)**
+
+> 多态是指，子类可以替换父类，在实际的代码运行过程中，调用子类的方法实现。
+
+多态特性能提高代码的可扩展性和复用性。多态可以提高代码的扩展性和复用性，是很多设计模式、设计原则、编程技巧的代码实现基础。
+
+对于多态特性的实现方式，除了利用“**继承加方法重写**”这种实现方式之外，我们还有其他两种比较常见的的实现方式，一个是**利用接口类语法**，另一个是利用 **duck-typing 语法**。不过，并不是每种编程语言都支持接口类或者 duck-typing 这两种语法机制，比如 C++ 就不支持接口类语法，而 duck-typing 只有一些动态语言才支持，比如 Python、JavaScript 等。 
+
+**1. 继承加方法重写**
+
+```java
+
+public class DynamicArray {
+  private static final int DEFAULT_CAPACITY = 10;
+  protected int size = 0;
+  protected int capacity = DEFAULT_CAPACITY;
+  protected Integer[] elements = new Integer[DEFAULT_CAPACITY];
+  
+  public int size() { return this.size; }
+  public Integer get(int index) { return elements[index];}
+  //...省略n多方法...
+  
+  public void add(Integer e) {
+    ensureCapacity();
+    elements[size++] = e;
+  }
+  
+  protected void ensureCapacity() {
+    //...如果数组满了就扩容...代码省略...
+  }
+}
+
+public class SortedDynamicArray extends DynamicArray {
+  @Override
+  public void add(Integer e) {
+    ensureCapacity();
+    int i;
+    for (i = size-1; i>=0; --i) { //保证数组中的数据有序
+      if (elements[i] > e) {
+        elements[i+1] = elements[i];
+      } else {
+        break;
+      }
+    }
+    elements[i+1] = e;
+    ++size;
+  }
+}
+
+public class Example {
+  public static void test(DynamicArray dynamicArray) {
+    dynamicArray.add(5);
+    dynamicArray.add(1);
+    dynamicArray.add(3);
+    for (int i = 0; i < dynamicArray.size(); ++i) {
+      System.out.println(dynamicArray[i]);
+    }
+  }
+  
+  public static void main(String args[]) {
+    DynamicArray dynamicArray = new SortedDynamicArray();
+    test(dynamicArray); // 打印结果：1、3、5
+  }
+}
+```
+
+**2. 接口类实现多态**
+
+```java
+public interface Iterator {
+  String hasNext();
+  String next();
+  String remove();
+}
+
+public class Array implements Iterator {
+  private String[] data;
+  
+  public String hasNext() { ... }
+  public String next() { ... }
+  public String remove() { ... }
+  //...省略其他方法...
+}
+
+public class LinkedList implements Iterator {
+  private LinkedListNode head;
+  
+  public String hasNext() { ... }
+  public String next() { ... }
+  public String remove() { ... }
+  //...省略其他方法... 
+}
+
+public class Demo {
+  private static void print(Iterator iterator) {
+    while (iterator.hasNext()) {
+      System.out.println(iterator.next());
+    }
+  }
+  
+  public static void main(String[] args) {
+    Iterator arrayIterator = new Array();
+    print(arrayIterator);
+    
+    Iterator linkedListIterator = new LinkedList();
+    print(linkedListIterator);
+  }
+}
+```
+
+**3. duck-typing 语法**
+
+```python
+class Logger:
+    def record(self):
+        print(“I write a log into file.”)
+        
+class DB:
+    def record(self):
+        print(“I insert data into db. ”)
+        
+def test(recorder):
+    recorder.record()
+
+def demo():
+    logger = Logger()
+    db = DB()
+    test(logger)
+    test(db)
+```
+
+> *duck-typing 实现多态的方式非常灵活。Logger 和 DB 两个类没有任何关系，既不是继承关系，也不是接口和实现的关系，但是只要它们都有定义了 record() 方法，就可以被传递到 test() 方法中，在实际运行的时候，执行对应的 record() 方法。*
+>
+> *也就是说，只要两个类具有相同的方法，就可以实现多态，并不要求两个类之间有任何关系，这就是所谓的 duck-typing，是一些动态语言所特有的语法机制。而像 Java 这样的静态语言，通过继承实现多态特性，必须要求两个类之间有继承关系，通过接口实现多态特性，类必须实现对应的接口。*
 
 
 
@@ -104,17 +318,154 @@ public class Wallet {
 
 > TODO
 
+
+
 ### 07 |  理论四：哪些代码设计看似是面向对象，实际是面向过程的？ 
 
-> TODO
+> **把所有代码都塞到类里，自然就是在进行面向对象编程了吗？**
+
+常见的编程范式或者说编程风格有三种，面向过程编程、面向对象编程、函数式编程，而面向对象编程又是这其中最主流的编程范式。现如今，大部分编程语言都是面向对象编程语言，大部分软件都是基于面向对象编程这种编程范式来开发的。 
+
+不过，在实际的开发工作中，很多同学对面向对象编程都有误解，总以为把所有代码都塞到类里，自然就是在进行面向对象编程了。实际上，这样的认识是不正确的。有时候，从表面上看似是面向对象编程风格的代码，从本质上看却是面向过程编程风格的。
+
+下面结合具体的代码实例来讲一讲，有哪些看似是面向对象，实际上是面向过程编程风格的代码，并且分析一下，为什么我们很容易写出这样的代码。面向过程编程是否就真的无用武之地了呢？是否有必要杜绝在面向对象编程中写面向过程风格的代码呢？ 
+
+下面通过三个典型的代码案例，说明什么样的代码看似是面向对象风格，实际上是面向过程风格的
+
+**1. 滥用 getter、setter 方法 **
+
+> 问题
+
+定义完类的属性之后，就顺手把这些属性的 getter、setter 方法全都定义上。 它违反了面向对象编程的封装特性，相当于将面向对象编程风格退化成了面向过程编程风格。
+
+```java
+public class ShoppingCart {
+  private int itemsCount;
+  private double totalPrice;
+  private List<ShoppingCartItem> items = new ArrayList<>();
+  
+  public int getItemsCount() {
+    return this.itemsCount;
+  }
+  
+  public void setItemsCount(int itemsCount) {
+    this.itemsCount = itemsCount;
+  }
+  
+  public double getTotalPrice() {
+    return this.totalPrice;
+  }
+  
+  public void setTotalPrice(double totalPrice) {
+    this.totalPrice = totalPrice;
+  }
+
+  public List<ShoppingCartItem> getItems() {
+    return this.items;
+  }
+  
+  public void addItem(ShoppingCartItem item) {
+    items.add(item);
+    itemsCount++;
+    totalPrice += item.getPrice();
+  }
+  // ...省略其他方法...
+}
+```
+
+在这段代码中，ShoppingCart 是一个简化后的购物车类，有三个私有（private）属性：itemsCount、totalPrice、items。对于 itemsCount、totalPrice 两个属性，我们定义了它们的 getter、setter 方法。对于 items 属性，我们定义了它的 getter 方法和 addItem() 方法。代码很简单，理解起来不难。那你有没有发现，这段代码有什么问题呢？ 
+
+我们先来看前两个属性，itemsCount 和 totalPrice。虽然我们将它们定义成 private 私有属性，但是提供了 public 的 getter、setter 方法，这就跟将这两个属性定义为 public 公有属性，没有什么两样了。外部可以通过 setter 方法随意地修改这两个属性的值。除此之外，任何代码都可以随意调用 setter 方法，来重新设置 itemsCount、totalPrice 属性的值，这也会导致其跟 items 属性的值不一致。 
+
+**面向对象封装的定义是：通过访问权限控制，隐藏内部数据，外部仅能通过类提供的有限的接口访问、修改内部数据。**所以，暴露不应该暴露的 setter 方法，明显违反了面向对象的封装特性。数据没有访问权限控制，任何代码都可以随意修改它，代码就退化成了面向过程编程风格的了 
+
+> 建议
+
+在设计实现类的时候，除非真的需要，否则尽量不要给属性定义 setter 方法。除此之外，尽管 getter 方法相对 setter 方法要安全些，但是如果返回的是集合容器，那也要防范集合内部数据被修改的风险。 
+
+**2. 滥用全局变量和全局方法 **
+
+在面向对象编程中，常见的全局变量有单例类对象、静态成员变量、常量等，常见的全局方法有静态方法。单例类对象在全局代码中只有一份，所以，它相当于一个全局变量。静态成员变量归属于类上的数据，被所有的实例化对象所共享，也相当于一定程度上的全局变量。而常量是一种非常常见的全局变量，比如一些代码中的配置参数，一般都设置为常量，放到一个 Constants 类中。静态方法一般用来操作静态变量或者外部数据。你可以联想一下我们常用的各种 Utils 类，里面的方法一般都会定义成静态方法，可以在不用创建对象的情况下，直接拿来使用。静态方法将方法与数据分离，破坏了封装特性，是典型的面向过程风格。 
+
+例如常见的 Constatns 类定义
+
+```java
+public class Constants {
+  public static final String MYSQL_ADDR_KEY = "mysql_addr";
+  public static final String MYSQL_DB_NAME_KEY = "db_name";
+  public static final String MYSQL_USERNAME_KEY = "mysql_username";
+  public static final String MYSQL_PASSWORD_KEY = "mysql_password";
+  
+  public static final String REDIS_DEFAULT_ADDR = "192.168.7.2:7234";
+  public static final int REDIS_DEFAULT_MAX_TOTAL = 50;
+  public static final int REDIS_DEFAULT_MAX_IDLE = 50;
+  public static final int REDIS_DEFAULT_MIN_IDLE = 20;
+  public static final String REDIS_DEFAULT_KEY_PREFIX = "rt:";
+  
+  // ...省略更多的常量定义...
+}
+```
+
+> **问题**
+
+1. 影响代码的可维护性
+
+   如果参与开发同一个项目的工程师有很多，在开发过程中，可能都要涉及修改这个类，比如往这个类里添加常量，那这个类就会变得越来越大，成百上千行都有可能，查找修改某个常量也会变得比较费时，而且还会增加提交代码冲突的概率。 
+
+2. 增加代码的编译时间
+   当 Constants 类中包含很多常量定义的时候，依赖这个类的代码就会很多。那每次修改 Constants 类，都会导致依赖它的类文件重新编译，因此会浪费很多不必要的编译时间。不要小看编译花费的时间，对于一个非常大的工程项目来说，编译一次项目花费的时间可能是几分钟，甚至几十分钟。而我们在开发过程中，每次运行单元测试，都会触发一次编译的过程，这个编译时间就有可能会影响到我们的开发效率 
+
+3. 影响代码的复用性 
+   如果我们要在另一个项目中，复用本项目开发的某个类，而这个类又依赖 Constants 类。即便这个类只依赖 Constants 类中的一小部分常量，我们仍然需要把整个 Constants 类也一并引入，也就引入了很多无关的常量到新的项目中 
+
+> **建议** 
+
+1. 第一种是将 Constants 类拆解为功能更加单一的多个类，比如跟 MySQL 配置相关的常量，我们放到 MysqlConstants 类中；跟 Redis 配置相关的常量，我们放到 RedisConstants 类中
+2. 并不单独地设计 Constants 常量类，而是哪个类用到了某个常量，我们就把这个常量定义到这个类中。比如，RedisConfig 类用到了 Redis 配置相关的常量，那我们就直接将这些常量定义在 RedisConfig 中，这样也提高了类设计的内聚性和代码的复用性。 
+
+**3.  定义数据和方法分离的类 **
+
+传统的 MVC 结构分为 Model 层、Controller 层、View 层这三层。不过，在做前后端分离之后，三层结构在后端开发中，会稍微有些调整，被分为 Controller 层、Service 层、Repository 层。Controller 层负责暴露接口给前端调用，Service 层负责核心业务逻辑，Repository 层负责数据读写。而在每一层中，我们又会定义相应的 VO（View Object）、BO（Business Object）、Entity。一般情况下，VO、BO、Entity 中只会定义数据，不会定义方法，所有操作这些数据的业务逻辑都定义在对应的 Controller 类、Service 类、Repository 类中。**这就是典型的面向过程的编程风格**。 
+
+实际上，这种开发模式叫作**基于贫血模型的开发模式**，也是我们现在非常常用的一种 Web 项目的开发模式。
+
+> *看到这里，你内心里应该有很多疑惑吧？既然这种开发模式明显违背面向对象的编程风格，为什么大部分 Web 项目都是基于这种开发模式来开发呢？* 
+
+---
+
+**在面向对象编程中，为什么容易写出面向过程风格的代码？**
+
+我们在进行面向对象编程的时候，很容易不由自主地就写出面向过程风格的代码，或者说感觉面向过程风格的代码更容易写。这是为什么呢？ 
+
+你可以联想一下，在生活中，你去完成一个任务，你一般都会思考，应该先做什么、后做什么，如何一步一步地顺序执行一系列操作，最后完成整个任务。面向过程编程风格恰恰符合人的这种流程化思维方式。而面向对象编程风格正好相反。它是一种自底向上的思考方式。它不是先去按照执行流程来分解任务，而是将任务翻译成一个一个的小的模块（也就是类），设计类之间的交互，最后按照流程将类组装起来，完成整个任务。我们在上一节课讲到了，这样的思考路径比较适合复杂程序的开发，但并不是特别符合人类的思考习惯。 
+
+除此之外，面向对象编程要比面向过程编程难一些。在面向对象编程中，类的设计还是挺需要技巧，挺需要一定设计经验的。你要去思考如何封装合适的数据和方法到一个类里，如何设计类之间的关系，如何设计类之间的交互等等诸多设计问题。 
+
+所以，基于这两点原因，很多工程师在开发的过程，更倾向于用不太需要动脑子的方式去实现需求，也就不由自主地就将代码写成面向过程风格的了。 
+
+**面向过程编程及面向过程编程语言就真的无用武之地了吗？ **
+
+前面我们讲了面向对象编程相比面向过程编程的各种优势，又讲了哪些代码看起来像面向对象风格，而实际上是面向过程编程风格的。那是不是面向过程编程风格就过时了被淘汰了呢？是不是在面向对象编程开发中，我们就要杜绝写面向过程风格的代码呢？ 
+
+前面我们有讲到，如果我们开发的是微小程序，或者是一个数据处理相关的代码，以算法为主，数据为辅，那脚本式的面向过程的编程风格就更适合一些。当然，面向过程编程的用武之地还不止这些。实际上，面向过程编程是面向对象编程的基础，面向对象编程离不开基础的面向过程编程。为什么这么说？我们仔细想想，类中每个方法的实现逻辑，不就是面向过程风格的代码吗？ 
+
+除此之外，面向对象和面向过程两种编程风格，也并不是非黑即白、完全对立的。在用面向对象编程语言开发的软件中，面向过程风格的代码并不少见，甚至在一些标准的开发库（比如 JDK、Apache Commons、Google Guava）中，也有很多面向过程风格的代码。 
+
+不管使用面向过程还是面向对象哪种风格来写代码，我们最终的目的还是写出易维护、易读、易复用、易扩展的高质量代码。只要我们能避免面向过程编程风格的一些弊端，控制好它的副作用，在掌控范围内为我们所用，我们就大可不用避讳在面向对象编程中写面向过程风格的代码。 
+
+
 
 ### 08 |  理论五：接口vs抽象类的区别？如何用普通的类模拟抽象类和接口？ 
 
 > TODO
 
-### 
+### 09 |  理论六：为什么基于接口而非实现编程？有必要为每个类都定义接口吗？ 
 
+> TODO
 
+### 10 |  理论七：为何说要多用组合少用继承？如何决定该用组合还是继承？ 
+
+> TODO
 
 
 
